[package]
name = "iex-download"
description = "Download IEX market data and store it in HDF5"
version = "3.1.0"
edition = "2021"
authors = ["Steven Varga <steven@vargalabs.com>"]
license = "MIT"
repository = "https://github.com/vargaconsulting/iex-download"
readme = "README.md"
keywords = ["iex", "market-data", "hdf5"]
categories = ["data-processing", "finance"]
exclude = ["/target", "/examples/tmp/*"]
default-run = "iex-download"

[dependencies]
clap = { version = "4.5.48", features = ["derive", "cargo"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
chrono = { version = "0.4", features = ["clock"] }
pest = "2.8.2"
pest_derive = "2.8.2"
